104-middlewares-basic-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-basic-auth
  namespace: default
spec:
  basicAuth:
    secret: traefik-basic-auth
